--- a/README.rdoc
+++ b/README.rdoc
@@ -23,7 +23,7 @@ Things you may want to cover:
 
 * ...
 
-*
+* (test)
 
 
 Please feel free to use a different markup language if you do not plan to run
